# RambosPlayer

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  RambosPlayer.pro  deploy-arm64.sh  interview-claude-code-workflow.md  readme.md
.claude/: settings.local.json
.superpowers/brainstorm/1115-1778503712/content/: architecture.html
.superpowers/brainstorm/1115-1778503712/state/: server-stopped
cmake/: FindFFMPEG.cmake  toolchain-aarch64-linux-gnu.cmake
docs/: BUGFIX-LOG.md  DEVPLAN.md  EXPORT_BENCHMARK.md  EXPORT_OPTIMIZATION.md  LOGGING.md  audio-mix-architecture.html  code-review-phase13-audio-mix.md  http-mpeg-ts-vs-http-flv-dev-journey.md  interview-claude-code-workflow.md  phase9-pipeline.html  player-arch.html  playercontroller-dataflow.html  pull-streaming-arch.html  readme.md  seek-recording-fix.md  streaming-test-guide.md  博客园文章-从零构建FFmpeg全链路多媒体工具箱.md  博客园文章-从零构建FFmpeg推流管线踩坑记录.md  咸鱼兼职帖子.md  推流方案对比架构图.html  推流架构-Phase9重构.html  推流管线架构2.html  推流管线架构（已被重构掉）.html  架构流程图.html  滤镜面板操作逻辑.html  界面操作与数据逻辑.html  界面操作与数据逻辑2.html  知乎文章-如何用C++从零写一个多媒体工具箱.md  软解与硬解对比.html  项目技术问答.md
docs/solutions/: low-latency-streaming.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-04-26-rambos-player-core.md  2026-05-08-demuxthread.md  2026-05-17-phase9-restream.md  2026-05-27-phase12-video-editor.md  2026-05-31-phase13-audio-mix.md
docs/superpowers/specs/: 2026-05-08-demuxthread-design.md  2026-05-08-framequeue-design.md  2026-05-11-phase8-filter-design.md  demuxthread-design.html
release/: RELEASE-GUIDE.md  package.ps1  version.md
src/: audiodecodethread.cpp  audiodecodethread.h  audioencodethread.cpp  audioencodethread.h  audiomixer.cpp  audiomixer.h  audiomixpanel.cpp  audiomixpanel.h  audiomixpanel.ui  audiomixworker.cpp  audiomixworker.h  audiopreviewwindow.cpp  audiopreviewwindow.h  avsync.cpp  avsync.h  browseclipper.cpp  browseclipper.h  capturethread.cpp  capturethread.h  concatdemuxer.cpp  concatdemuxer.h  concatfilter.cpp  concatfilter.h  demuxthread.cpp  demuxthread.h  encodethread.cpp  encodethread.h  exportworker.cpp  exportworker.h  filtergraph.cpp  filtergraph.h  filterpanel.cpp  filterpanel.h  filterpanel.ui  framequeue.h  httpflvserver.cpp  httpflvserver.h  hwaccel.cpp  hwaccel.h  localrecorder.cpp  (+41 more)
tests/: CMakeLists.txt  tst_avsync.cpp  tst_demuxthread.cpp  tst_filtergraph.cpp  tst_framequeue.cpp  tst_hwaccel.cpp  tst_mergeworker.cpp  tst_seekrecord.cpp  tst_thumbnailextractor.cpp
